k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: camion-app
  labels:
    name: camion-app
